[package]
name = "ike"
version = "0.1.0"
edition = "2021"
description = "Small game engine with a simple editor"
repository = "https://github.com/ChangeCaps/ike"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "crates/ike-app" }
ike-assets = { version = "0.1.0", path = "crates/ike-assets" }
ike-core = { version = "0.1.0", path = "crates/ike-core" }
ike-debug = { version = "0.1.0", path = "crates/ike-debug" }
ike-ecs = { version = "0.1.0", path = "crates/ike-ecs" }
ike-gltf = { version = "0.1.0", path = "crates/ike-gltf", optional = true }
ike-input = { version = "0.1.0", path = "crates/ike-input" }
ike-light = { version = "0.1.0", path = "crates/ike-light", optional = true }
ike-log = { version = "0.1.0", path = "crates/ike-log" }
ike-macro = { version = "0.1.0", path = "crates/ike-macro" }
ike-math = { version = "0.1.0", path = "crates/ike-math" }
ike-node = { version = "0.1.0", path = "crates/ike-node" }
ike-pbr = { version = "0.1.0", path = "crates/ike-pbr", optional = true }
ike-physics = { version = "0.1.0", path = "crates/ike-physics", optional = true }
ike-render = { version = "0.1.0", path = "crates/ike-render", optional = true }
ike-transform = { version = "0.1.0", path = "crates/ike-transform" }
ike-util = { version = "0.1.0", path = "crates/ike-util" }
ike-winit = { version = "0.1.0", path = "crates/ike-winit" }

[features]
default = ["rayon", "gltf", "physics", "render", "pbr"] 
rayon = ["ike-ecs/rayon"]
trace = ["ike-app/trace", "ike-ecs/trace", "ike-render/trace", "ike-physics/trace"]
tracy = ["trace", "ike-app/tracing-tracy", "ike-log/tracing-tracy"]
gltf = ["ike-gltf"]
physics = ["ike-physics", "ike-node/physics"]
render = ["ike-render", "ike-node/render", "ike-debug/render"]
light = ["ike-light", "render"]
pbr = ["ike-pbr", "light", "render"]