[package]
name = "ike"
version = "0.1.0-alpha0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
ike-internal = { path = "crates/ike-internal", version = "0.1.0-alpha.0" }
ike-dylib = { path = "crates/ike-dylib", version = "0.1.0-alpha.0", optional = true }

[features]
default = ["debug-dynamic"]
debug-dynamic = ["ike-dylib"]
dynamic = ["ike-dylib", "ike-dylib/release"]
