[package]
name = "ike-editor"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
# ike
ike = { path = "..", version = "0.0.1", default-features = false }
ike-egui = { path = "../crates/ike-egui", version = "0.0.1" }

# other
clap = "3.0.0-beta.5"
libloading = "0.7"
