[package]
name = "ike-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-type = { version = "0.1.0", path = "../ike-type" }
ike-util = { version = "0.1.0", path = "../ike-util" }

# other
tracy-client = { version = "0.12", optional = true }

[features]
trace = []
tracing-tracy = ["tracy-client"]