[package]
name = "ike-assets"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-derive = { version = "0.0.1", path = "../ike-derive" }
ike-reflect = { version = "0.0.1", path = "../ike-reflect" }

# other
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }