[package]
name = "ike-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-task = { version = "0.1.0", path = "../ike-task" }
ike-reflect = { version = "0.1.0", path = "../ike-reflect" }
ike-type = { version = "0.1.0", path = "../ike-type" }
ike-util = { version = "0.1.0", path = "../ike-util" } 

# other
ahash = "0.7"
async-fs = "1.5"
futures-lite = "1.12"
rand = "0.8"
thiserror = "1.0"

