[package]
name = "ike-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-task = { version = "0.1.0", path = "../ike-task" }