[package]
name = "ike-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-math = { version = "0.1.0", path = "../ike-math" }
ike-reflect = { version = "0.1.0", path = "../ike-reflect" }
ike-task = { version = "0.1.0", path = "../ike-task" }
ike-type = { version = "0.1.0", path = "../ike-type" }

# other
serde = "1.0"