[package]
name = "ike-core"
version = "0.1.0-alpha0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-app = { path = "../ike-app", version = "0.1.0-alpha0.0" }
ike-ecs = { path = "../ike-ecs", version = "0.1.0-alpha0.0" }
