[package]
name = "ike-debug-line"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-render = { version = "0.0.1", path = "../ike-render" }
ike-transform = { version = "0.0.1", path = "../ike-transform" }

# other
glam = "0.19"
crossbeam = "0.8"
bytemuck = { version = "1.0", features = ["derive"] }