[package]
name = "ike-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-math = { version = "0.1.0", path = "../ike-math" }
ike-render = { version = "0.1.0", path = "../ike-render" } 

# other
bytemuck = { version = "1.8", features = ["derive"] }
crossbeam = "0.8"

[features]
default = []
render = []