[package]
name = "ike-derive"
version = "0.0.1"
edition = "2021"
description = "Provides derive implementations for ike"
repository = "https://github.com/ChangeCaps/ike"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = "^1.0"
proc-macro-crate = "1.1"
