[package]
name = "ike-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-macro = { version = "0.1.0", path = "../ike-macro" }
ike-reflect = { version = "0.1.0", path = "../ike-reflect" }
ike-task = { version = "0.1.0", path = "../ike-task" }
ike-type = { version = "0.1.0", path = "../ike-type" }
ike-util = { version = "0.1.0", path = "../ike-util" } 

# other
crossbeam = "0.8"
rayon = { version = "1.5", optional = true }
thiserror = "1.0"

[features]
default = []
trace = []