[package]
name = "ike-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "^1.7", features = ["derive"] }
clap = "^3.0.0-beta.4"
ike = { path = "../..", default-features = false, features = ["runner"] }
libloading = "^0.7"
log = "^0.4"
simple_logger = "^1.13"
serde = { version = "^1.0", features = ["derive"]}
toml = "^0.5"
  