[package]
name = "ike-egui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-render = { version = "0.0.1", path = "../ike-render" }
ike-wgpu = { version = "0.0.1", path = "../ike-wgpu" }

# other
bytemuck = { version = "1.7", features = ["derive"] }
egui = "0.15"