[package]
name = "ike-hdr"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-render = { version = "0.0.1", path = "../ike-render" }
ike-transform = { version = "0.0.1", path = "../ike-transform" }
