[package]
name = "ike-input"
version = "0.1.0-alpha0.0"
edition = "2021"
description = "Input handling for ike"
repository = "https://github.com/ChangeCaps/ike"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-app = { path = "../ike-app", version = "0.1.0-alpha.0", optional = true }
ike-ecs = { path = "../ike-ecs", version = "0.1.0-alpha.0" }

glam = "0.22"

[features]
default = ["plugin"]
plugin = ["ike-app"]
