[package]
name = "ike-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-util = { version = "0.1.0", path = "../ike-util" }

# other
tracing-log = "0.1"
tracing-subscriber = "0.3" 
tracing-tracy = { version = "0.8", optional = true }