[package]
name = "ike-lumi"
version = "0.1.0-alpha0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-app = { path = "../ike-app", version = "0.1.0-alpha.0" }
ike-ecs = { path = "../ike-ecs", version = "0.1.0-alpha.0" }
ike-transform = { path = "../ike-transform", version = "0.1.0-alpha.0" }
ike-wgpu = { path = "../ike-wgpu", version = "0.1.0-alpha.0" }
ike-window = { path = "../ike-window", version = "0.1.0-alpha.0" }

lumi = { git = "https://github.com/ChangeCaps/lumi" }
