[package]
name = "ike-pbr"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-assets = { version = "0.0.1", path = "../ike-assets" }
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-debug-line = { version = "0.0.1", path = "../ike-debug-line" }
ike-reflect = { version = "0.0.1", path = "../ike-reflect" }
ike-render = { version = "0.0.1", path = "../ike-render" }
ike-transform = { version = "0.0.1", path = "../ike-transform" }

# other
bytemuck = "1.7"
glam = "0.19"