[package]
name = "ike-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-core = { version = "0.1.0", path = "../ike-core" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-id = { version = "0.1.0", path = "../ike-id" }
ike-math = { version = "0.1.0", path = "../ike-math" }
ike-transform = { version = "0.1.0", path = "../ike-transform" }

# other
rapier3d = "0.11"