[package]
name = "ike-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-core = { version = "0.1.0", path = "../ike-core" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-math = { version = "0.1.0", path = "../ike-math" }
ike-reflect = { version = "0.1.0", path = "../ike-reflect" }
ike-task = { version = "0.1.0", path = "../ike-task" }
ike-transform = { version = "0.1.0", path = "../ike-transform" }
ike-type = { version = "0.1.0", path = "../ike-type" }
ike-util = { version = "0.1.0", path = "../ike-util" }

# other
crossbeam = "0.8"

[dependencies.rapier3d]
version = "0.11"

[features]
trace = []