[package]
name = "ike-physics"
version = "0.1.0-alpha0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-app = { path = "../ike-app", version = "0.1.0-alpha.0" }
ike-core = { path = "../ike-core", version = "0.1.0-alpha.0" }
ike-ecs = { path = "../ike-ecs", version = "0.1.0-alpha.0" }
ike-math = { path = "../ike-math", version = "0.1.0-alpha.0" }
ike-transform = { path = "../ike-transform", version = "0.1.0-alpha.0" }

crossbeam = "0.8"
deref-derive = "0.1"
nalgebra = "0.31"
rapier2d = { version = "0.16.0", optional = true }
rapier3d = { version = "0.16.0", optional = true }

[features]
default = ["3d"]
2d = ["rapier2d"]
3d = ["rapier3d"]
