[package]
name = "ike-post-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-render = { version = "0.1.0", path = "../ike-render" }

# other
bytemuck = { version = "1.8", features = ["derive"] }