[package]
name = "ike-reflect"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-derive = { version = "0.0.1", path = "../ike-derive" }

# other
egui = "0.15"
erased-serde = "0.3"
glam = { version = "0.19", features = ["serde"] }
serde = "1.0"