[package]
name = "ike-render"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-assets = { version = "0.0.1", path = "../ike-assets" }
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-transform = { version = "0.0.1", path = "../ike-transform" }
ike-wgpu = { version = "0.0.1", path = "../ike-wgpu" }

# other
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_alloc"] }
thiserror = "1.0"
once_cell = "1.8" 
glam = { version = "0.19", features = ["bytemuck"] }
image = "0.23"