[package]
name = "ike-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-assets = { version = "0.1.0", path = "../ike-assets" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-id = { version = "0.1.0", path = "../ike-id" }
ike-math = { version = "0.1.0", path = "../ike-math", features = ["bytemuck"] }
ike-transform = { version = "0.1.0", path = "../ike-transform" }

# other
bytemuck = { version = "1.8", features = ["extern_crate_alloc"] }
crossbeam = "0.8"
thiserror = "1.0"
wgpu = "0.12"
