[package]
name = "ike-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-app = { version = "0.1.0", path = "../ike-app" }
ike-assets = { version = "0.1.0", path = "../ike-assets" }
ike-ecs = { version = "0.1.0", path = "../ike-ecs" }
ike-math = { version = "0.1.0", path = "../ike-math", features = ["bytemuck"] }
ike-reflect = { version = "0.1.0", path = "../ike-reflect" }
ike-transform = { version = "0.1.0", path = "../ike-transform" }
ike-type = { version = "0.1.0", path = "../ike-type" }
ike-util = { version = "0.1.0", path = "../ike-util" }

# other
bytemuck = { version = "1.8", features = ["extern_crate_alloc", "derive"] }
crossbeam = "0.8"
image = { version = "0.24", default_features = false }
thiserror = "1.0"
wgpu = "0.12"

[features]
default = ["png", "jpg"]
trace = []
png = ["image/png"]
jpg = ["image/jpeg"]