[package]
name = "ike-scene"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ike
ike-assets = { version = "0.0.1", path = "../ike-assets" }
ike-core = { version = "0.0.1", path = "../ike-core" }
ike-reflect = { version = "0.0.1", path = "../ike-reflect" }

# other
serde = { version = "1.0", features = ["derive"] }