[package]
name = "ike-transform"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-app = { path = "../ike-app", version = "0.1.0-alpha.0" }
ike-ecs = { path = "../ike-ecs", version = "0.1.0-alpha.0" }

shiv-transform = "0.1.0-alpha.3"
