[package]
name = "ike-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# other
ahash = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1"
uuid = { version = "0.8", features = ["v4"] } 