[package]
name = "ike-wgpu"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Wgpu bindings for ike"
repository = "https://github.com/ChangeCaps/ike"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ike-app = { path = "../ike-app", version = "0.1.0-alpha.0" }
ike-ecs = { path = "../ike-ecs", version = "0.1.0-alpha.0" }
ike-window = { path = "../ike-window", version = "0.1.0-alpha.0" }

deref-derive = "0.1"
futures-lite = "1.12"
wgpu = "0.14"
